Refactor gemini/easy tests to remove test smells